[package]
name = "cancelcaster"
version = "0.1.0"
edition = "2021"

[dependencies]
# Audio processing
cpal = "0.15"
ringbuf = "0.3"
rustfft = "6.2"
apodize = "1.0"

# GUI
eframe = "0.27"
egui = "0.27"

# Utilities
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Cross-platform audio
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["audioclient", "mmdeviceapi", "combaseapi"] }

[target.'cfg(target_os = "macos")'.dependencies]
coreaudio-rs = "0.11"

[target.'cfg(target_os = "linux")'.dependencies]
alsa = "0.7"
pulse = "0.5"
